Added authentication and refactored some code
